<resources>
    <string name="app_name">ControlCampo</string>
    <string name="bg_image_desc">Imagen de fondo</string>
    <string name="logo_desc">Logo Sanear</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="causa_no_efectividad">Causa No Efectividad</string>
    <string name="efectividad">Efectividad</string>
    <string name="ipid">IPID</string>
    <string name="elemento_intervenido">Elemento Intervenido</string>
    <string name="servicio">Servicio</string>
    <string name="aplicativo">Aplicativo</string>
    <string name="municipio">Municipio</string>
    <string name="direcci_n">Dirección</string>
    <string name="fecha_fin">Fecha Fin</string>
    <string name="fecha_inicio">Fecha Inicio</string>
    <string name="solicitud">Solicitud</string>
    <string name="acta_n">Acta N°</string>
    <string name="informacion_preliminar">INFORMACION PRELIMINAR</string>
    <string name="flecha_continuar">Flecha continuar</string>
    <string name="usuario">Usuario</string>
    <string name="logo_samear">logo_samear</string>
    <string name="contrase_a">Contraseña</string>
    <string name="todo">TODO</string>
    <string name="informaci_n_t_cnica_de_la_solicitud">INFORMACIÓN TÉCNICA DE LA SOLICITUD</string>
    <string name="guardar">Guardar</string>
    <string name="trabajo">Trabajo</string>
    <string name="motivo">Motivo</string>
    <string name="causa">Causa</string>
    <string name="informacion_tecnica_de_la_solicitud">INFORMACION TECNICA DE LA SOLICITUD</string>
</resources>
