<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login">

    <!-- Título -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="0"
        android:layout_height="wrap_content"
        android:text="@string/informacion_tecnica_de_la_solicitud"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <!-- Trabajo -->
    <AutoCompleteTextView
        android:id="@+id/spTrabajo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/trabajo"
        android:inputType="none"
        android:focusable="true"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_arrow_drop_down"
        android:layout_marginHorizontal="21dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/dropdown_item_background"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/AutoCompleteTextStyle"/>

    <!-- Motivo -->
    <AutoCompleteTextView
        android:id="@+id/spMotivo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/motivo"
        android:inputType="none"
        android:focusable="true"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_arrow_drop_down"
        android:layout_marginHorizontal="21dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/dropdown_item_background"
        app:layout_constraintTop_toBottomOf="@id/spTrabajo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/AutoCompleteTextStyle"/>

    <!-- Causa -->
    <AutoCompleteTextView
        android:id="@+id/spCausa"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/causa"
        android:inputType="none"
        android:focusable="true"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_arrow_drop_down"
        android:layout_marginHorizontal="21dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/dropdown_item_background"
        app:layout_constraintTop_toBottomOf="@id/spMotivo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/AutoCompleteTextStyle"/>

    <!-- Navegación inferior -->
    <LinearLayout
        android:id="@+id/layoutNavegacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btnAnterior"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="TODO"
            android:scaleType="fitCenter"
            android:src="@drawable/flecha"
            android:rotationY="180"
            tools:ignore="ContentDescription,HardcodedText" />

        <ImageButton
            android:id="@+id/btnSiguiente"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/flecha_continuar"
            android:scaleType="fitCenter"
            android:src="@drawable/flecha" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
